# saddy-graphics-engine-2d

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.mingw  Makefile_demo.linux  Makefile_lib.mingw  Makefile_library.linux  README.md  abstractmappinggenerator.cpp  appveyor.yml  appveyor_original.yml  build-all-linux-gcc.sh  build-all-linux-gcc.sh.template  build-all-mingw.bat  build-all-mingw.bat.template  build-all-msvc-2015.bat  build-all-msvc.bat  build-all-msvc.bat.template  build-ifaceed-mingw.bat  build-ifaceed-msvc.bat  build-travis-ifaceed.sh  build-travis.sh  builddocs.bat  builddocs.sh  configure_builds.rb  debug.bat  debug.sh  demo.sh  demo_debug.bat  demo_debug.sh  demo_release.bat  demo_release.sh  library.sh  library_debug.bat  library_debug.sh  (+25 more)
cmake/: FindirrKlang.cmake
docs/dev/: saddy.asta
docs/exporter/: README
docs/freetype/: README
docs/ifaceeditor/: README
examples/: TRUE.tga  georgia.CFG  georgia2.CFG  ingame.tga  playerbullet.tga  smiles.rar  times_lg.CFG  times_red.CFG  title.tga
examples/example-game-in-qt/: example-game-in-qt.pro  example-game-in-qt.sln  example-game-in-qt.vcxproj  example-game-in-qt.vcxproj.filters  game.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sadqtglcontext.cpp  sadqtkeytosadkey.cpp  sadqtkeytosadkey.h  sadqtmainloop.cpp  sadqtmainloop.h  sadqtmousecursor.cpp  sadqtmousecursor.h  sadqtopenglwidget.cpp  sadqtopenglwidget.h  sadqtrenderer.cpp  sadqtrenderer.h  sadqtwindow.cpp  sadqtwindow.h
examples/game/: CMakeLists.txt  Doxyfile  abstractautomaticgun.cpp  abstractautomaticgun.h  automaticgun.cpp  automaticgun.h  bonus.cpp  bonus.h  constants.cpp  constants.h  enemy.cpp  enemy.h  enemybullet.cpp  enemybullet.h  enemyspawn.cpp  enemyspawn.h  game-2015.sln  game-2015.vcxproj  game.cpp  game.h  game.sln  game.vcproj  game.vcxproj  game.vcxproj.filters  gameobject.cpp  gameobject.h  gameobjectconstants.cpp  gameobjectconstants.h  main.cpp  mkbuild.sh  movitem.cpp  movitem.h  player.cpp  player.h  playerbullet.cpp  playerbullet.h  preprocess.bat  release.bat  release.sh  shootingenemy.cpp  (+9 more)
examples/imgui/: CMakeLists.txt  debug.sh  example.cpp  game.cpp  imgui.sln  imgui.vcxproj  imgui.vcxproj.filters  make.bat  sadimgui.cpp  sadimgui.h
examples/multithreading/: CMakeLists.txt  Doxyfile  Inventory.cpp  Inventory.h  Item.cpp  Item.h  cameralockanimation.cpp  cameralockanimation.h  cameramovement.cpp  cameramovement.h  delayedtask.cpp  delayedtask.h  delayedtasks.cpp  delayedtasks.h  enemycounter.cpp  enemycounter.h  game.cpp  game.h  initphysics.cpp  initphysics.h  main.cpp  multithreadin.vcproj  multithreading-2015.sln  multithreading-2015.vcxproj  sounds.cpp  (+11 more)
examples/stress-physics/: CMakeLists.txt  Doxyfile  ball.cpp  ball.h  bouncesolver.cpp  bouncesolver.h  coloredbullet.cpp  coloredbullet.h  constants.cpp  constants.h  elasticforce.cpp  elasticforce.h  gridnode.cpp  gridnode.h  gridnodedge.h  gridnodeedge.cpp  main.cpp  movingsmile.cpp  movingsmile.h  platform.cpp  platform.h  preprocess.sh  shooter.cpp  shooter.h  stress-physics-2015.sln  stress-physics-2015.vcxproj  stress-physics-2015.vcxproj.filters  stress-physics.sln  stress-physics.vcproj  stress-physics.vcxproj  stress-physics.vcxproj.filters  uncoloredbullet.cpp  uncoloredbullet.h  wall.cpp  wall.h  world.cpp  world.h  worldobject.cpp  worldobject.h  worldobjectconstants.cpp  (+1 more)
examples/stress-physics/makefiles/: Makefile_Demo_Debug.linux  Makefile_Demo_Debug.mingw  Makefile_Demo_Release.linux  Makefile_Demo_Release.mingw
examples/stress-physics/preprocess/: Makefile.hbd  Makefile_demo_debug_linux.hbd  Makefile_demo_debug_mingw.hbd  Makefile_demo_release_linux.hbd  Makefile_demo_release_mingw.hbd
include/: Engine.h  Render.h  Settings.h  Timer.h  Types.h  Window.h  algo.h  arcuptr.h  bindable.h  camera.h  classmetadata.h  classmetadatacastfunction.h  classmetadatacontainer.h  clipboard.h  closure.h  cmdoptions.h  collection.h  equalto.h  extchecker.h  font.h  fontmanager.h  fontnode.h  fontshaderfunction.h  formattedlabel.h  fpsinterpolation.h  ftfont.h  fuzzyequal.h  geometry2d.h  geometry3d.h  glcontext.h  input.h  isrefcountable.h  keycodes.h  keymouseconditions.h  label.h  lightmodel.h  load.h  log.h  mainloop.h  matrix2x2.h  (+77 more)
makefiles/: Makefile_Demo_Debug.linux  Makefile_Demo_Debug.mingw  Makefile_Demo_Release.linux  Makefile_Demo_Release.mingw  Makefile_Library_Debug.linux  Makefile_Library_Debug.mingw  Makefile_Library_Release.linux  Makefile_Library_Release.mingw  mkbuild.sh
plugins/: all_debug.bat  all_debug.sh  all_release.bat  all_release.sh
plugins/phy52d/: CMakeLists.txt  app.cpp  appobject.cpp  objectemitter.cpp  phy52d.filters  phy52d.sln  phy52d.vcxproj
preprocess/: Makefile.hbd  Makefile_demo_debug_linux.hbd  Makefile_demo_debug_mingw.hbd  Makefile_demo_release_linux.hbd  Makefile_demo_release_mingw.hbd  Makefile_library_debug_linux.hbd  Makefile_library_debug_mingw.hbd  Makefile_library_linux.hbd  Makefile_library_mingw.hbd  Makefile_library_release_linux.hbd  Makefile_library_release_mingw.hbd
saddy-freetype/: ftfont.cpp  ftfont.h  make-library.sh  make-libtest.sh  make-test.sh  make_mingw.bat  test.bat  test.cpp
saddy_exporter/: Makefile  pngimage.cpp  pngimage.h
src/: Engine.cpp  Render.cpp  Settings.cpp  TestGL.cpp  Timer.cpp  Window.cpp  bindable.cpp  bmploader.cpp  camera.cpp  classmetadata.cpp  classmetadatacastfunction.cpp  classmetadatacontainer.cpp  clipboard.cpp  closure.cpp  cmdoptions.cpp  defaulttexloader.cpp  extchecker.cpp  font.cpp  fontmanager.cpp  fontnode.cpp  fontshaderfunction.cpp  formattedlabel.cpp  fpsinterpolation.cpp  fuzzyequal.cpp  geometry2d.cpp  geometry3d.cpp  glcontext.cpp  input.cpp  keycodes.cpp  keymouseconditions.cpp  label.cpp  lightmodel.cpp  load.cpp  log.cpp  main.cpp  mainloop.cpp  mousecursor.cpp  object.cpp  objectdependentfpsinterpolation.cpp  opengl.cpp  (+54 more)
tests/: README
tests/dukpp-03-irrklang/: CMakeLists.txt  alltests.vcxproj  alltests.vcxproj.filters  engine.cpp  release.sh
tools/: hbuild.cpp
(+2724 files in other folders)
